<resources>
    <string name="app_name">Kinovod</string>
    <string name="description_poster">Постер к фильму</string>
    <string name="rating_star_poster">⭐ %s</string>
    <string name="tag_and_time_poster">%sч %sм</string>
    <string name="rating_poster_kinopoinsk_poster">KP %s</string>
    <string name="rating_poster_IMDb_poster">IMDb %s</string>
    <string name="tv_films_movie">Фильмы</string>
    <string name="description_settings_movie">Настройки</string>
    <string name="download_movies">Загрузка фильмов...</string>
    <string name="tv_label_rooms">Комнаты</string>
    <string name="btn_create">Создать</string>
    <string name="btn_connect_rooms">Присоедениться</string>
    <string name="tv_profile">Профиль</string>
    <string name="tv_username_and_date">\@%s · с %s %s</string>
    <string name="tv_watched">просмотрено</string>
    <string name="tv_friends">друзей</string>
    <string name="tv_wishlist">хочу</string>
    <string name="tv_all_friends">Все %s →</string>
    <string name="label_friends">Друзья</string>
    <string name="label_wish_list">Хочу посмотреть</string>
    <string name="tv_all_wish_list">Все %s →</string>
    <string name="tv_all_watched_list">Все %s →</string>
    <string name="tv_label_watched_list">Просмотрено</string>
    <string name="tv_general_movies_friend_profile">%s общих фильма</string>
    <string name="tv_all_friends_profile">Все %s →</string>
    <string name="menu_rooms">Комнаты</string>
    <string name="menu_movies">Каталог</string>
    <string name="menu_profile">Профиль</string>
    <string name="description_comeback">Назад</string>
    <string name="label_new_room">Новая комната</string>
    <string name="label_name_room">Название комнаты</string>
    <string name="hint_example_new_room">Например: Комедийный вечер</string>
    <string name="label_player">Участники</string>
    <string name="chip_plus_friends">+ друзья</string>
    <string name="chip_add_friends">+ друзья</string>
    <string name="chip_multi_vote">Множественный</string>
    <string name="chip_single_vote">Одиночный</string>
    <string name="chip_priority_vote">Приоритет</string>
    <string name="label_type_vote">Тип голосования</string>
    <string name="label_voting_period">Срок голосования</string>
    <string name="label_compare_wishlists">Сравнить понравившиеся</string>
    <string name="label_anonymous_vote">Анонимное голосование</string>
    <string name="chip_add">+ добавить</string>
    <string name="label_filters">Фильтры (жанры, рейтинг)</string>
    <string name="label_limit_movies">Лимит предложенных фильмов</string>
    <string name="btn_create_room">✨ Создать комнату</string>
    <string name="btn_delete_account">Удалить аккаунт</string>
    <string name="btn_logout">Выйти</string>
    <string name="description_avatar_image_placeholder">avatar image placeholder</string>
    <string name="tv_movie_name">Дюна: \nЧасть вторая</string>
    <string name="description_movie_poster">movie poster</string>
    <string name="tv_rating_kinopoisk">⭐ Кинопоиск %s</string>
    <string name="tv_rating_friends">👥 Друзья %s</string>
    <string name="tv_rating_imdb">🎬 IMDb %s</string>
    <string name="label_my_rating">Моя оценка:</string>
    <string name="label_description">Описание</string>
    <string name="tv_time_movie_detail">🕒 %sч %sмин</string>
    <string name="tv_tag_movie_detail">🎭 %s</string>
    <string name="tv_age_limit_movie_detail">🔞 %s+</string>
    <string name="btn_want_watch">Хочу посмотреть</string>
    <string name="btn_watched">Просмотрено</string>
    <string name="label_actors">Актёры</string>
    <string name="label_where_to_watch">Где посмотреть</string>
    <string name="label_trailers">Трейлеры</string>
    <string name="label_kinopoisk">Кинопоиск</string>
    <string name="label_reviews">Отзывы</string>
    <string name="tv_year_movie">Год выпуска: %s</string>
    <string name="label_kinovod">Киновод</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="tv_find_movie_for_company">Найди кино для компании</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="label_email">Email</string>
    <string name="label_password">Пароль</string>
    <string name="btn_enter">Войти</string>
    <string name="label_no_account">Нет аккаунта?</string>
    <string name="tv_registration">Зарегистрироваться</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="username">Имя пользователя</string>
    <string name="user_tag">Тег</string>
    <string name="dialog_label_choose_genres">Выберите жанры</string>
    <string name="label_genres">Жанры</string>
    <string name="btn_clear">Очистить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_submit">Применить</string>
    <string name="btn_sending">Отправка …</string>
    <string name="label_voting">🎯 Голосование</string>
    <string name="btn_leave_voting_room">Покинуть комнату</string>
    <string name="tv_tap_to_movie_see_details">👆 нажми на фильм — увидишь детали</string>
    <string name="btn_find_matches">Искать совпадение</string>
    <string name="btn_suggest_movie">Предложить фильм</string>
    <string name="tv_room_creator">👑 создатель: %s</string>
    <string name="tv_room_id">ID: %s</string>


    <!-- Типы фильмов -->
    <string name="movie_type_any">Любой</string>
    <string name="movie_type_movie">Фильм</string>
    <string name="movie_type_series">Сериал</string>

    <string name="room_info_format">%1$d участников · %2$d/%3$d фильмов</string>
    <string name="tv_voting_count">🗳 %s голосов</string>
    <string name="label_vote">Голосовать</string>
    <string name="btn_submit_votes">Поддтвердить голос</string>
    <string name="hint_enter_id_room">ID комнаты</string>
    <string name="label_connect_to_room">Подключение к комнате</string>
    <string name="label_select_friends">Выберите друзей</string>
    <string name="label_info_review_list_is_empty">Список отзывов пока что пуст! :(</string>
    <string name="label_add_friend_by_tag">Добавить друга по тегу</string>
    <string name="hint_tag_add_friend">\@volsidav</string>
    <string name="tv_friend_tag">\@%s</string>
    <string name="label_host">хост</string>
    <string name="btn_suggestion">Предложить</string>


</resources>