<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_kinovod"
            android:textColor="@color/purple_500"
            android:textSize="42sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_movie_clapper_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_find_movie_for_company"
            android:textColor="@color/tags_text_grey_poster"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_edittext_rounded_new_room"
        android:orientation="horizontal"
        android:padding="12dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/purple_500"
            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/registration"
            android:textColor="@color/tags_text_grey_poster"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/bg_trailers"
            app:cornerRadius="40dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailLogin"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/label_email"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:boxStrokeColor="@color/gray_50"
            app:hintTextColor="@color/tags_text_grey_poster">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="16sp"
                tools:text="alex@film.ru" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordLogin"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/label_password"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="16sp"
                tools:text="qwerty123" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:text="@string/btn_enter"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/purple_500"
            app:cornerRadius="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_no_account"
                android:textColor="@color/tags_text_grey_poster"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnSwitchToRegister"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registration"
                android:layout_marginStart="20dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>